--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node sample.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "",
