--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jQuery": "~1.7.4",
     "jsdom": "~0.6.0",
     "xmlhttprequest": "~1.5.0",
-    "webshot": "~0.3.3"
+    "webshot": "~0.3.3",
+    "accounting": "~0.3.2"
   }
 }
